--- a/package.json
+++ b/package.json
@@ -3,13 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon server",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.13",
+    "@chakra-ui/react": "^1.6.3",
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@prisma/client": "^2.24.1",
+    "@react-spring/web": "^9.2.1",
+    "@types/react-slick": "^0.23.4",
+    "axios": "^0.21.1",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "framer-motion": "^4.1.17",
+    "fuse.js": "^6.4.5",
     "next": "10.2.3",
+    "next-auth": "^3.25.0",
+    "nextjs-progressbar": "^0.0.10",
+    "nodemon": "^2.0.12",
+    "prisma": "^2.24.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-paystack": "^3.0.3",
+    "react-select": "^4.3.1",
+    "react-shop-cart": "^1.0.5",
+    "react-shopping-cart": "^1.9.5",
+    "react-slick": "^0.28.1",
+    "react-use-cart": "^1.11.1",
+    "reactjs-popup": "^2.0.4",
+    "slick-carousel": "^1.8.1",
+    "swr": "^0.5.6"
   }
 }
